调整了资源引用，对插件本身未做修改

--- a/tests/demo.html
+++ b/tests/demo.html
@@ -235,10 +235,9 @@
 
 
     <script src="js/jquery.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="resources/hippo/iconfont.css?v=202112171533" />
-    <link rel="stylesheet" type="text/css" href="resources/layui/laydate/laydate.css" />
-    <script src="resources/layui/laydate/laydate.js"></script>
-    <script src="resources/layui/layer/layer.js"></script>
+    <link rel="stylesheet" type="text/css" href="js/laydate/laydate.css" />
+    <script src="js/laydate/laydate.js"></script>
+    <script src="js/layer/layer.js"></script>
     <script src="../src/etable.js"></script>
 
     <script>
