--- a/tests/demo.html
+++ b/tests/demo.html
@@ -33,10 +33,15 @@
 
         select {
             width: 100%;
-            height: 100%;
+            height: 26px;
             text-align: left;
             box-sizing: border-box;
             padding: 4px 4px 5px;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            appearance: none;
+            background: #fff url(./arrow-down-16.png) no-repeat scroll right center;
+            border-radius: 0;
         }
 
         input:focus,
