--- a/tests/demo.html
+++ b/tests/demo.html
@@ -40,7 +40,7 @@
             -webkit-appearance: none;
             -moz-appearance: none;
             appearance: none;
-            background: #fff url(./arrow-down-16.png) no-repeat scroll right center;
+            background: #fff url(./images/arrow-down-16.png) no-repeat scroll right center;
             border-radius: 0;
         }
 
